Fix overflowing display and layout.

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ button{
     border: none;
     text-align: center;
     background-color: #F5F5F5;
-    margin: 2px;
+    margin: 0;
 }
 
 
@@ -29,8 +29,9 @@ button{
 
 .row{
     display: flex;
-    gap: 0;
     justify-content: space-between;
+    margin-top: 5px;
+    gap: 5px;
 }
 
 #display{
@@ -38,7 +39,7 @@ button{
     text-align: end;
     color: #FA58B6;
     height: 45px;
-    font-size: 45px;
+    font-size: 35px;
     display: flex;
     align-items: center;
     justify-content: end;
@@ -48,18 +49,17 @@ button{
     background-color: #7A0BC0;
     padding: 10px;
     border-radius: 10px;
+    width: 200px;
 }
 
-#digitContainer{
-    gap: 0;
-}
 
 #bodyContainer{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
-#operatorContainer{
-    display: flex;
-    flex-direction: column;
+#decimalPoint{
+    flex: 2;
 }
+
